--- a/gb/23/9/22/n14079351.md
+++ b/gb/23/9/22/n14079351.md
@@ -1,32 +1,32 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>两岸关系微妙 谢金河：台湾将好30年中国坏30年</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079352-637192-600x400.jpg" />
 <h6>财信传媒董事长谢金河开讲。（新唐人提供）
 </h6>
 <hr>
-<p>【大纪元2023年09月22日讯】（大纪元记者赖友容台湾台南报导）<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%A7%92%E5%8A%9B.md#1">美中角力</a>下牵动了未来世局发展，地缘政治带动地缘杀戮，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%B7%A5%E5%8E%82.md#1">世界工厂</a>的脚色起了新变化，中国三只脚被折断了，中国经济在奔驰30年后将进行大调整，财信传媒董事长<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B0%A2%E9%87%91%E6%B2%B3.md#1">谢金河</a>近日在台南福尔摩沙酒店开讲时指出，从此台湾将好30年，中国坏30年，这是两岸关系微妙的地方。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E8%B0%A2%E9%87%91%E6%B2%B3.md#1">谢金河</a>提到，三十多年前的1990年时，台湾的经济为什么开始下行了？因为中国开始翻身起来了，他就预测台湾会坏30年，中国会好30年。他讲的时候大家都不相信，而现在他说台湾会好30年，中国会坏30年，大家一样不相信。</p>
+<p>【大纪元2023年09月22日讯】（大纪元记者赖友容台湾台南报导）美中角力下牵动了未来世局发展，地缘政治带动地缘杀戮，世界工厂的脚色起了新变化，中国三只脚被折断了，中国经济在奔驰30年后将进行大调整，财信传媒董事长谢金河近日在台南福尔摩沙酒店开讲时指出，从此台湾将好30年，中国坏30年，这是两岸关系微妙的地方。</p>
+<p>谢金河提到，三十多年前的1990年时，台湾的经济为什么开始下行了？因为中国开始翻身起来了，他就预测台湾会坏30年，中国会好30年。他讲的时候大家都不相信，而现在他说台湾会好30年，中国会坏30年，大家一样不相信。</p>
 <p>谢金河是最早看坏中国经济的人之一，他刚开始讲中国经济不好的时候，是没有人相信的，当时也没有人敢公开讲中国经济不好。最近哈佛大学冷战问题专家格雷厄姆．艾利森说：未来10年，世界面临的不是中国的崛起，而是中国的衰落。所以，谢金河认为，中国的压力持续增加，对全世界威胁的压力将下降。</p>
-<h2>中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">房地产</a>像癌细胞<br />
+<h2>中国房地产像癌细胞<br />
 最后咬死人</h2>
-<p>5年前谢金河就说中国<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E6%88%BF%E5%9C%B0%E4%BA%A7.md#1">房地产</a>公司会倒了，如今它负债金额庞大，其股价不是剩零头就是遭到停牌，他说，众多投资人也起来开始抗争，将导致中国房地产风暴，其实怎么救房市都没有机会再救起来。</p>
+<p>5年前谢金河就说中国房地产公司会倒了，如今它负债金额庞大，其股价不是剩零头就是遭到停牌，他说，众多投资人也起来开始抗争，将导致中国房地产风暴，其实怎么救房市都没有机会再救起来。</p>
 <p>中国救房地产也用尽了各种手段，最近使出救急手段的认房不认贷，鼓励大家再继续买房子，再搞下去的话，得叫银行去救的意思，银行救了以后也会倒了，演变成连环效应；他强调，中国的房地产现况，就像身上长的癌细胞，如果不割掉那个癌细胞会越来越大，最后把人咬死。</p>
 <p>中国房地产老早就破产了，却不能倒，就挂在那里，让房地产公司不断的拉高杠杆向银行搬钱，但负面效应越搞越严重。中国这回面临到台湾1990年代的台湾病。</p>
 <p>中国经济奔驰30年后将进行大调整，谢金河说，除了房地产泡沫化、去杠杆，到高失业率、地方财政困难，还有人口红利消失等5项都很严重；其中他特别提的是，中国年轻人（16岁到24岁）失业率有21.3%，而北大教授则估46.5%，也就是4000万年轻人失业；还有中国老年人口越来越多，估到2025年逾4亿老人，而银行呆账也将越来越沉重。</p>
 <h2>中国的冰风暴</h2>
 <p>大陆最近好几个大官像外交部长秦刚、国防部长李尚福等人不见了。王毅重掌外交部长时说，秦刚患了右倾病，中国共产党的精神叫战狼，共产党最终目的是消灭资本主义，而且人类命运共同体要由共产党来主导等等，王毅认为美国要承认中国是大国、强国，还得跟中国分享权利等等；谢金河说，世界正在改变，大国真能崛起？这是王毅精神。</p>
 <p>最后美中一定会硬碰硬起来，但是美国对付中国绝对不会客气的，谢金河预测。</p>
-<p><ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%BE%8E%E4%B8%AD%E8%A7%92%E5%8A%9B.md#1">美中角力</a>牵动着未来世局发展，地缘政治将带动地缘杀戮。我们看到美国联合荷兰、日本一起限制晶片相关敏感产品输往中国，在友岸外包的新趋势下，<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>放在友好国家，把生产基地从中国向四方扩散。</p>
-<p>美国已经移转了<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%BE%9B%E5%BA%94%E9%93%BE.md#1">供应链</a>，供应链变化之大已经显现。美国公布2023年上半年的三大进口国，中国已经从第一名变成第三名了（排在墨西哥、加拿大之后），占比也从2017年的21.7%降到13.3%；而中国2022年的总贸易顺差6,856亿美元中，对美国的顺差就超过了一半的3,829亿美元，谢金河说，如果这个一半再减一半，中国就惨了。这也是地缘政治带来的变化，美国全力扶扶墨西哥变成美国的美洲工厂。</p>
-<p>所以<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E4%B8%96%E7%95%8C%E5%B7%A5%E5%8E%82.md#1">世界工厂</a>角色起了新变化后，拉动中国的三架马车，包括新经济带动科技奔腾、房地产撑起内循环及作为世界工厂所带动出口，谢金河认为，这中国的三只脚从此被折断了，供应链也被切断了。</p>
+<p>美中角力牵动着未来世局发展，地缘政治将带动地缘杀戮。我们看到美国联合荷兰、日本一起限制晶片相关敏感产品输往中国，在友岸外包的新趋势下，供应链放在友好国家，把生产基地从中国向四方扩散。</p>
+<p>美国已经移转了供应链，供应链变化之大已经显现。美国公布2023年上半年的三大进口国，中国已经从第一名变成第三名了（排在墨西哥、加拿大之后），占比也从2017年的21.7%降到13.3%；而中国2022年的总贸易顺差6,856亿美元中，对美国的顺差就超过了一半的3,829亿美元，谢金河说，如果这个一半再减一半，中国就惨了。这也是地缘政治带来的变化，美国全力扶扶墨西哥变成美国的美洲工厂。</p>
+<p>所以世界工厂角色起了新变化后，拉动中国的三架马车，包括新经济带动科技奔腾、房地产撑起内循环及作为世界工厂所带动出口，谢金河认为，这中国的三只脚从此被折断了，供应链也被切断了。</p>
 <h2>出口从中国转到美国<br />
 增强了台湾贸易</h2>
 <p>中国的供应链被切断了以后，两岸的贸易逐渐从高档滑落。在2020年台湾出口到中国，它的占比最高到43.9%时、顺差是865亿美元，2021年的占比开始下滑到42.3%，到2022年第四季开始快速下滑，今年1月到8月的出口值剩下981亿美元，大概占比降到35.3%。</p>
-<figure id="attachment_14079356" aria-describedby="caption-attachment-14079356" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14079356-637196.jpg"><img class="size-large wp-image-14079356" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079356-637196-600x452.jpg" alt="" width="600" b="452" /></a><figcaption id="caption-attachment-14079356" class="wp-caption-text">两岸贸易表。（谢金河／大纪元）</figcaption></figure>
+<figure id="attachment_14079356" aria-describedby="caption-attachment-14079356" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14079356-637196.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14079356" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079356-637196-600x452.jpg" alt="" width="600" b="452" /></a><figcaption id="caption-attachment-14079356" class="wp-caption-text">两岸贸易表。（谢金河／大纪元）</figcaption></figure>
 <p>两岸的贸易占比开始下降，跟供应链的移转有很大的关系。谢金河表示，台湾对美国的出口，从原来8.3%提高到现在占比的16.5%，所以美国的市场现在开始活跃起来了。同时台湾现在对墨西哥的出口也显着成长，现在对东盟的占比升到17.2%。所以美国正在取代中国市场的变化，但是台湾总体的贸易力道还是非常强大。</p>
-<figure id="attachment_14079353" aria-describedby="caption-attachment-14079353" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14079353-637193.jpg"><img class="size-large wp-image-14079353" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079353-637193-600x449.jpg" alt="" width="600" b="449" /></a><figcaption id="caption-attachment-14079353" class="wp-caption-text">两岸贸易出口金额及年增率。（谢金河提供）</figcaption></figure>
+<figure id="attachment_14079353" aria-describedby="caption-attachment-14079353" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14079353-637193.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14079353" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079353-637193-600x449.jpg" alt="" width="600" b="449" /></a><figcaption id="caption-attachment-14079353" class="wp-caption-text">两岸贸易出口金额及年增率。（谢金河提供）</figcaption></figure>
 <p>而在过去两年台湾对中国的顺差都是超过一千多亿美元，这顺差的金额其实跟台湾以半导体为主的零组件出口到中国的金额是差不多的。（看图3）谢金河指出，中国会打压台湾释迦、凤梨、芒果或吴郭鱼等的进口，因为他有替代性，但从来就不敢禁半导体进口，若打压下去中国死得更快。</p>
 <p>我们再看看（图2）是两岸贸易出口的金额与年增率，就可以看出两岸三地的贸易，在这10年之间的变化，其中今年1月到8月的年增率是-23.4%，那今年整年的衰退幅度是很大的。从2013年开始，中间是有一些改变，但是台湾对大陆的出口金额，其实一直都在增加着。</p>
 <h2>两岸关系非常微妙</h2>
@@ -38,56 +38,43 @@
 <h2>台湾有没有ECFA 已经没什差别</h2>
 <p>所以，谢金河要告诉大家，中国的经济今年非常不好，从两岸的贸易大概可以看到一些端倪，但现在很多统派的人都在想ECFA。谢金河指出，现在台湾有没有ECFA已经没有什么差别了。</p>
 <p>他以石化业为例提到，台湾出口到中国的塑化产品，在2022年只有63.4亿美元，已经很少了，今年还在继续衰退中；而输中纺织品在2022年剩下5.66亿美元，今年1至4月也只有1亿多美元。我们来看一下台塑集团业绩很惨淡，台塑四宝在2021年还赚了2,414亿台币，但今年到上半年的营利只剩下95亿多台币。</p>
-<figure id="attachment_14079355" aria-describedby="caption-attachment-14079355" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14079355-637195.jpg"><img class="size-large wp-image-14079355" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079355-637195-600x446.jpg" alt="" width="600" b="446" /></a><figcaption id="caption-attachment-14079355" class="wp-caption-text">ECFA的存废争议。（谢金河提供）</figcaption></figure>
+<figure id="attachment_14079355" aria-describedby="caption-attachment-14079355" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2023/09/id14079355-637195.jpg"><img loading="lazy" decoding="async" class="size-large wp-image-14079355" src="https://i.epochtimes.com/assets/uploads/2023/09/id14079355-637195-600x446.jpg" alt="" width="600" b="446" /></a><figcaption id="caption-attachment-14079355" class="wp-caption-text">ECFA的存废争议。（谢金河提供）</figcaption></figure>
 <p>这10年来，如果只靠ECFA而技术没有提升或创新，一定是死路一条；所以，谢金河强调，假如产品是标准规格且大量生产，在台湾一定没有发展的空间，也一定拼不过中国，因为中国经常以国家力量无限量扩产，这也包括钢铁、水泥、造纸等，甚至于面板、电动车等。</p>
 <p>这几年全世界表现经济最亮眼的是台湾，谢金河说，所以这些年台湾很多企业的规模不断在成长，如果AI能够发展很好的话，可让台湾ICT产业市值大跃升，台湾将诞生非常多的护国群山。◇</p>
 <p>责任编辑：陈玟绮</p>
-
-<hr>
-
-
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/23/n14059710.md#1">谈中国房企爆雷 吴东亮：外溢效应有待观察</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/28/n14062746.md#1">中共禁台湾芒果 专家：应减少对中国经济依赖</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/5/n14067543.md#1">台商大举撤离中国 专家：台湾有望在全球经济中崛起</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/9/n14070029.md#1">聪明用电节电有感 台电北南区处用电研讨会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074475.md#1">美台避免双重课税法案 郑文灿：台美双赢</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076163.md#1">用数字看台湾 谢金河：台企业今年获利3兆元</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080963.md#1">台精进国土管理 空间资讯应用成关键</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080910.md#1">升息循环或未结束 台经院：有二度通膨迹象</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080951.md#1">境外两类平台具高风险 台金管会设专区示警</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14080952.md#1">台加科技合作25周年 续签MOU聚焦AI领域</a></li>
-<hr>
-
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/23/n14059710.md#1">谈中国房企爆雷 吴东亮：外溢效应有待观察</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062746.md#1">中共禁台湾芒果 专家：应减少对中国经济依赖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/5/n14067543.md#1">台商大举撤离中国 专家：台湾有望在全球经济中崛起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/9/n14070029.md#1">聪明用电节电有感 台电北南区处用电研讨会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/15/n14074475.md#1">美台避免双重课税法案 郑文灿：台美双赢</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/18/n14076163.md#1">用数字看台湾 谢金河：台企业今年获利3兆元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418925.md#1">赴中旅费遭删八成 金管会恐无法赴中金检</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418923.md#1">金管会准了 富邦投信砸逾18亿元并日盛投信</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418914.md#1">12月外销订单连10红 全年接单写第3高</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418920.md#1">川普2.0时代 勤业众信：台商应留意四大课题</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/ntdtv/blob/master/gb/2020/01/05/a102745738.md#1" target="_blank">响彻世界政坛的正义之声</a>  </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/17/11/3/n9802518.md#1" target="_blank">你不了解的邓小平：与毛一同指挥大跃进（下）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
-<hr>
-
+<li><a href="https://github.com/1992513/djy/blob/master/gb/20/12/8/n12602834.md#1" target="_blank">35国逾九百政要联署 谴责中共迫害法轮功</a>  </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/12/17/n9966250.md#1" target="_blank">文革中自杀的几个名人（5）翻译家傅雷</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/9/n11172449.md#1" target="_blank">法轮功神奇民间心口相传 中共杜撰1400案例</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/18/n14076236.md#1">【未解之谜】《推背图》46象 即将应验的预言？！</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/22/n14078897.md#1">【未解之谜】魏斯博士（上）看到地球未来</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/15/n14074471.md#1">仁心君子：救助仇人活命  不爱宰相高位爱真相</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/17/n14075537.md#1">秋分：彼岸日 天地阴阳调和</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/6/21/n14020684.md#1">流落香港的“菠萝油公主”  天涯海角总有人伴你“等风来”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081108.md#1">【传统音乐】神韵乐团七团 室内乐及独奏音乐会 | 首播：2023年9月30日 晚间8:00</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/25/n14081138.md#1">【新唐人快报】越南开发稀土矿场 挑战中共垄断</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079811.md#1">【中国禁闻】上海疫情升温 医院爆满 小区出入受限</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080182.md#1">中共耗资2千亿办亚运 《杭州，为你羞耻》再传</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080303.md#1">世界上最古老的木结构建筑早于人类文明</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079877.md#1">邓朴方去职 习近平或对更多太子党开刀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080019.md#1">徐新洋大婚宴开35桌 徐乃麟买单喊话想抱孙</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080305.md#1">范冰冰任西班牙影展评审 开幕红毯造型成焦点</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080342.md#1">为何不上常驻综艺？刘诗诗回应获夸赞</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080166.md#1">简廷芮大婚感动洒泪 新郎晒甜蜜：眼里只有她</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/24/n14080359.md#1">睽违4年返港 吴彦祖自曝遭爱女揶揄不再当红</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14074775.md#1">他一年甩30公斤 脂肪肝消失 秘诀是吃2种食物</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/8/26/n14061511.md#1">忧郁症是心灵感冒 中医师建议从三方面入手</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/16/n14075086.md#1">他汀药物具鲜为人知危险  1种维生素可完美代替</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079774.md#1">8月全美租金连4降 西部降幅最多</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/23/n14079734.md#1">美国面临缺房危机 后院运动正在兴起</a></li>
-<hr>
-
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/22/n14079351.htm">两岸关系微妙 谢金河：台湾将好30年中国坏30年</a></p><hr>
-
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/22/n14079351.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/2/6/n12737786.md#1">【元曲大家】江南才子徐再思 写尽相思意</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/28/n14399999.md#1">郑板桥教子</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410373.md#1">第五面墙：三位意大利天顶壁画家的杰作欣赏</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/21/n14418423.md#1">【舞蹈】飞天艺术学院2024第二学期舞蹈考试（高班 女生）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416537.md#1">【净园财经】阿根廷奇迹 中国的米莱在哪里？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416610.md#1">【菁英论坛】TikTok生死时刻 中美数字战开打</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416856.md#1">中芯甩卖28纳米芯片 分析：或为驱动“内循环”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/19/n14416718.md#1">泰缅边境失联模特杨泽琪获救 指甲被拔引关注</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416239.md#1">川普就职前和习通话释何信号 专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14416015.md#1">港片在大陆市场连连失利 谢霆锋转向开演唱会</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/17/n14415967.md#1">3个女儿同时发烧住院输液 谢娜自曝情绪崩溃</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416567.md#1">传洛杉矶豪宅被损毁 央视名导张纪中赴美处理</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416632.md#1">扛不起天价违约金？赵露思休养不足一月复工</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/13/n14412855.md#1">自我诊断和改善 摆脱睡眠呼吸中止症</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/10/n14410842.md#1">人偏肺病毒感染高发 病毒专家教你怎样应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/11/n14410940.md#1">食物与心灵存在秘密连结 吃对了情绪才好</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/18/n14416095.md#1">【车评】拥有STI灵魂的跑车 2025 Subaru WRX tS</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/14/n14412910.md#1">高血压患者的急救、养生、茶饮及运动</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/22/n14079351.htm">两岸关系微妙 谢金河：台湾将好30年中国坏30年</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/22/n14079351.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
